--- a/app/src/main/res/layout/activity_main_2.xml
+++ b/app/src/main/res/layout/activity_main_2.xml
@@ -26,6 +26,7 @@
         android:layout_alignParentBottom="true">
 
         <Button
+            android:id="@+id/button1"
             android:layout_width="0dp"
             android:layout_height="100dp"
             android:layout_weight="1"
@@ -34,6 +35,7 @@
             android:text="A" />
 
         <Button
+            android:id="@+id/button2"
             android:layout_width="0dp"
             android:layout_height="100dp"
             android:layout_weight="1"
