--- a/app/src/main/res/drawable/tex_he_terrain_08.xml
+++ b/app/src/main/res/drawable/tex_he_terrain_08.xml
@@ -5,7 +5,7 @@
     android:viewportWidth="28"
     android:viewportHeight="32">
 
-    <path android:fillColor="@android:color/darker_gray"
+    <path android:fillColor="@android:color/holo_blue_dark"
         android:pathData="M14, 0
                         L28, 8
                         L28, 24
